--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==23.2.1
 aiohttp==3.9.1
 aiosignal==1.3.1
 altair==5.2.0
@@ -11,9 +12,16 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+contourpy==1.2.0
+cycler==0.12.1
 dataclasses-json==0.6.3
 distro==1.9.0
+fastapi==0.109.0
+ffmpy==0.3.1
+filelock==3.13.1
+fonttools==4.47.2
 frozenlist==1.4.1
+fsspec==2023.12.2
 gitdb==4.0.11
 GitPython==3.1.40
 google-ai-generativelanguage==0.4.0
@@ -21,19 +29,24 @@ google-api-core==2.15.0
 google-auth==2.25.2
 google-generativeai==0.3.2
 googleapis-common-protos==1.62.0
+gradio==4.14.0
+gradio_client==0.8.0
 greenlet==3.0.3
 grpcio==1.60.0
 grpcio-status==1.60.0
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.26.0
+huggingface-hub==0.20.2
 idna==3.6
 importlib-metadata==6.11.0
+importlib-resources==6.1.1
 Jinja2==3.1.2
 jsonpatch==1.33
 jsonpointer==2.4
 jsonschema==4.20.0
 jsonschema-specifications==2023.12.1
+kiwisolver==1.4.5
 langchain==0.1.0
 langchain-community==0.0.11
 langchain-core==0.1.9
@@ -41,11 +54,13 @@ langsmith==0.0.79
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.2
+matplotlib==3.8.2
 mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
 numpy==1.26.2
 openai==1.7.1
+orjson==3.9.10
 outcome==1.3.0.post0
 packaging==23.2
 pandas==2.1.4
@@ -59,9 +74,12 @@ pycparser==2.21
 pydantic==2.5.3
 pydantic_core==2.14.6
 pydeck==0.8.1b0
+pydub==0.25.1
 Pygments==2.17.2
+pyparsing==3.1.1
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
 referencing==0.32.0
@@ -70,27 +88,35 @@ rich==13.7.0
 rpds-py==0.15.2
 rsa==4.9
 selenium==4.16.0
+semantic-version==2.10.0
+shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.0
 sortedcontainers==2.4.0
 SQLAlchemy==2.0.25
 st-pages==0.4.5
+starlette==0.35.1
 streamlit==1.29.0
+streamlit-multipage==0.0.18
 tenacity==8.2.3
 toml==0.10.2
+tomlkit==0.12.0
 toolz==0.12.0
 tornado==6.4
 tqdm==4.66.1
 trio==0.23.2
 trio-websocket==0.11.1
+typer==0.9.0
 typing-inspect==0.9.0
 typing_extensions==4.9.0
 tzdata==2023.3
 tzlocal==5.2
 urllib3==2.1.0
+uvicorn==0.25.0
 validators==0.22.0
 watchdog==3.0.0
+websockets==11.0.3
 wsproto==1.2.0
 yarl==1.9.4
 zipp==3.17.0
