--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ contourpy==1.2.0
 cycler==0.12.1
 dataclasses-json==0.6.3
 distro==1.9.0
-load_dotenv-0.1.0
+load_dotenv==0.1.0
 fastapi==0.109.0
 ffmpy==0.3.1
 filelock==3.13.1
